fix CSS alignment bug for quest-card with share buttons

--- a/styles/student-processed-quests.css
+++ b/styles/student-processed-quests.css
@@ -40,7 +40,7 @@
         "quest-bitmoji quest-title notification"
         "quest-bitmoji quest-points quest-points"
         "quest-bitmoji quest-date quest-date"
-        "quest-bitmoji share share";
+        "share share share";
     /* background-color: rgb(255, 241, 254); */
     background: linear-gradient(rgba(216, 233, 255, 0.7), rgba(238, 238, 238, 0.7)), url("/img/background_pattern_8.png");
     border-radius: 10px;
@@ -52,6 +52,7 @@
 }
 .sharethis-inline-share-buttons {
     grid-area: share;
+    display: block;
 }
 
 .quest-container:last-child {
